Imported Upstream version 2.7.0

--- a/spectrwm_us.conf
+++ b/spectrwm_us.conf
@@ -1,25 +1,95 @@
 # Key bindings for United States (us) keyboards
 # unbind with: bind[] = <keys>
+bind[bar_toggle]	= MOD+b
+bind[bar_toggle_ws]	= MOD+Shift+b
+bind[button2]		= MOD+v
 bind[cycle_layout]	= MOD+space
 bind[flip_layout]	= MOD+Shift+backslash
-bind[stack_reset]	= MOD+Shift+space
-bind[master_shrink]	= MOD+h
-bind[master_grow]	= MOD+l
+bind[float_toggle]	= MOD+t
+bind[focus_main]	= MOD+m
+bind[focus_next]	= MOD+j
+bind[focus_next]	= MOD+Tab
+bind[focus_prev]	= MOD+k
+bind[focus_prev]	= MOD+Shift+Tab
+bind[focus_urgent]	= MOD+u
+bind[height_grow]	= MOD+Shift+equal
+bind[height_shrink]	= MOD+Shift+minus
+bind[iconify]		= MOD+w
+bind[initscr]		= MOD+Shift+i
+bind[lock]		= MOD+Shift+Delete
 bind[master_add]	= MOD+comma
 bind[master_del]	= MOD+period
-bind[stack_inc]		= MOD+Shift+comma
+bind[master_grow]	= MOD+l
+bind[master_shrink]	= MOD+h
+bind[maximize_toggle]	= MOD+e
+bind[menu]		= MOD+p
+bind[move_down]		= MOD+Shift+bracketright
+bind[move_left]		= MOD+bracketleft
+bind[move_right]	= MOD+bracketright
+bind[move_up]		= MOD+Shift+bracketleft
+bind[mvrg_1]		= MOD+Shift+KP_End
+bind[mvrg_2]		= MOD+Shift+KP_Down
+bind[mvrg_3]		= MOD+Shift+KP_Next
+bind[mvrg_4]		= MOD+Shift+KP_Left
+bind[mvrg_5]		= MOD+Shift+KP_Begin
+bind[mvrg_6]		= MOD+Shift+KP_Right
+bind[mvrg_7]		= MOD+Shift+KP_Home
+bind[mvrg_8]		= MOD+Shift+KP_Up
+bind[mvrg_9]		= MOD+Shift+KP_Prior
+bind[mvws_1]		= MOD+Shift+1
+bind[mvws_2]		= MOD+Shift+2
+bind[mvws_3]		= MOD+Shift+3
+bind[mvws_4]		= MOD+Shift+4
+bind[mvws_5]		= MOD+Shift+5
+bind[mvws_6]		= MOD+Shift+6
+bind[mvws_7]		= MOD+Shift+7
+bind[mvws_8]		= MOD+Shift+8
+bind[mvws_9]		= MOD+Shift+9
+bind[mvws_10]		= MOD+Shift+0
+bind[mvws_11]		= MOD+Shift+F1
+bind[mvws_12]		= MOD+Shift+F2
+bind[mvws_13]		= MOD+Shift+F3
+bind[mvws_14]		= MOD+Shift+F4
+bind[mvws_15]		= MOD+Shift+F5
+bind[mvws_16]		= MOD+Shift+F6
+bind[mvws_17]		= MOD+Shift+F7
+bind[mvws_18]		= MOD+Shift+F8
+bind[mvws_19]		= MOD+Shift+F9
+bind[mvws_20]		= MOD+Shift+F10
+bind[mvws_21]		= MOD+Shift+F11
+bind[mvws_22]		= MOD+Shift+F12
+bind[name_workspace]	= MOD+Shift+slash
+bind[quit]		= MOD+Shift+q
+bind[raise_toggle]	= MOD+Shift+r
+bind[restart]		= MOD+q
+bind[rg_1]		= MOD+KP_End
+bind[rg_2]		= MOD+KP_Down
+bind[rg_3]		= MOD+KP_Next
+bind[rg_4]		= MOD+KP_Left
+bind[rg_5]		= MOD+KP_Begin
+bind[rg_6]		= MOD+KP_Right
+bind[rg_7]		= MOD+KP_Home
+bind[rg_8]		= MOD+KP_Up
+bind[rg_9]		= MOD+KP_Prior
+bind[rg_next]		= MOD+Shift+Right
+bind[rg_prev]		= MOD+Shift+Left
+bind[screenshot_all]	= MOD+s
+bind[screenshot_wind]	= MOD+Shift+s
+bind[search_win]	= MOD+f
+bind[search_workspace]	= MOD+slash
 bind[stack_dec]		= MOD+Shift+period
+bind[stack_inc]		= MOD+Shift+comma
+bind[stack_reset]	= MOD+Shift+space
 bind[swap_main]		= MOD+Return
-bind[focus_next]	= MOD+j
-bind[focus_prev]	= MOD+k
 bind[swap_next]		= MOD+Shift+j
 bind[swap_prev]		= MOD+Shift+k
 bind[term]		= MOD+Shift+Return
-bind[menu]		= MOD+p
-bind[quit]		= MOD+Shift+q
-bind[restart]		= MOD+q
-bind[focus_main]	= MOD+m
-bind[focus_urgent]	= MOD+u
+bind[uniconify]		= MOD+Shift+w
+bind[version]		= MOD+Shift+v
+bind[width_grow]	= MOD+equal
+bind[width_shrink]	= MOD+minus
+bind[wind_del]		= MOD+x
+bind[wind_kill]		= MOD+Shift+x
 bind[ws_1]		= MOD+1
 bind[ws_2]		= MOD+2
 bind[ws_3]		= MOD+3
@@ -43,77 +113,9 @@ bind[ws_20]		= MOD+F10
 bind[ws_21]		= MOD+F11
 bind[ws_22]		= MOD+F12
 bind[ws_next]		= MOD+Right
-bind[ws_prev]		= MOD+Left
 bind[ws_next_all]	= MOD+Up
-bind[ws_prev_all]	= MOD+Down
 bind[ws_next_move]	= MOD+Shift+Up
+bind[ws_prev]		= MOD+Left
+bind[ws_prev_all]	= MOD+Down
 bind[ws_prev_move]	= MOD+Shift+Down
 bind[ws_prior]		= MOD+a
-bind[mvws_1]		= MOD+Shift+1
-bind[mvws_2]		= MOD+Shift+2
-bind[mvws_3]		= MOD+Shift+3
-bind[mvws_4]		= MOD+Shift+4
-bind[mvws_5]		= MOD+Shift+5
-bind[mvws_6]		= MOD+Shift+6
-bind[mvws_7]		= MOD+Shift+7
-bind[mvws_8]		= MOD+Shift+8
-bind[mvws_9]		= MOD+Shift+9
-bind[mvws_10]		= MOD+Shift+0
-bind[mvws_11]		= MOD+Shift+F1
-bind[mvws_12]		= MOD+Shift+F2
-bind[mvws_13]		= MOD+Shift+F3
-bind[mvws_14]		= MOD+Shift+F4
-bind[mvws_15]		= MOD+Shift+F5
-bind[mvws_16]		= MOD+Shift+F6
-bind[mvws_17]		= MOD+Shift+F7
-bind[mvws_18]		= MOD+Shift+F8
-bind[mvws_19]		= MOD+Shift+F9
-bind[mvws_20]		= MOD+Shift+F10
-bind[mvws_21]		= MOD+Shift+F11
-bind[mvws_22]		= MOD+Shift+F12
-bind[rg_1]		= MOD+KP_End
-bind[rg_2]		= MOD+KP_Down
-bind[rg_3]		= MOD+KP_Next
-bind[rg_4]		= MOD+KP_Left
-bind[rg_5]		= MOD+KP_Begin
-bind[rg_6]		= MOD+KP_Right
-bind[rg_7]		= MOD+KP_Home
-bind[rg_8]		= MOD+KP_Up
-bind[rg_9]		= MOD+KP_Prior
-bind[rg_next]		= MOD+Shift+Right
-bind[rg_prev]		= MOD+Shift+Left
-bind[mvrg_1]		= MOD+Shift+KP_End
-bind[mvrg_2]		= MOD+Shift+KP_Down
-bind[mvrg_3]		= MOD+Shift+KP_Next
-bind[mvrg_4]		= MOD+Shift+KP_Left
-bind[mvrg_5]		= MOD+Shift+KP_Begin
-bind[mvrg_6]		= MOD+Shift+KP_Right
-bind[mvrg_7]		= MOD+Shift+KP_Home
-bind[mvrg_8]		= MOD+Shift+KP_Up
-bind[mvrg_9]		= MOD+Shift+KP_Prior
-bind[bar_toggle]	= MOD+b
-bind[focus_next]	= MOD+Tab
-bind[focus_prev]	= MOD+Shift+Tab
-bind[wind_kill]		= MOD+Shift+x
-bind[wind_del]		= MOD+x
-bind[screenshot_all]	= MOD+s
-bind[screenshot_wind]	= MOD+Shift+s
-bind[float_toggle]	= MOD+t
-bind[version]		= MOD+Shift+v
-bind[lock]		= MOD+Shift+Delete
-bind[initscr]		= MOD+Shift+i
-bind[iconify]		= MOD+w
-bind[uniconify]		= MOD+Shift+w
-bind[raise_toggle]	= MOD+Shift+r
-bind[button2]		= MOD+v
-bind[width_shrink]	= MOD+minus
-bind[width_grow]	= MOD+equal
-bind[height_shrink]	= MOD+Shift+minus
-bind[height_grow]	= MOD+Shift+equal
-bind[move_left]		= MOD+bracketleft
-bind[move_right]	= MOD+bracketright
-bind[move_up]		= MOD+Shift+bracketleft
-bind[move_down]		= MOD+Shift+bracketright
-bind[name_workspace]	= MOD+Shift+slash
-bind[search_workspace]	= MOD+slash
-bind[search_win]	= MOD+f
