--- a/spectrwm.conf
+++ b/spectrwm.conf
@@ -8,6 +8,8 @@
 # focus_close_wrap	= 1
 # focus_default		= last
 # spawn_position		= next
+# workspace_clamp	= 1
+# warp_focus		= 1
 # warp_pointer		= 1
 
 # Window Decoration
@@ -43,6 +45,7 @@
 # clock_enabled		= 1
 # clock_format		= %a %b %d %R %Z %Y
 # iconic_enabled	= 0
+# maximize_hide_bar	= 0
 # window_class_enabled	= 0
 # window_instance_enabled	= 0
 # window_name_enabled	= 0
