--- a/debian/control
+++ b/debian/control
@@ -18,8 +18,8 @@ Build-Depends: debhelper (>= 9),
                libxft-dev
 Standards-Version: 3.9.5
 Homepage: https://github.com/conformal/spectrwm
-Vcs-Git: git://anonscm.debian.org/collab-maint/spectrwm.git
-Vcs-Browser: http://anonscm.debian.org/cgit/collab-maint/spectrwm.git/
+Vcs-Git: https://anonscm.debian.org/git/collab-maint/spectrwm.git
+Vcs-Browser: https://anonscm.debian.org/cgit/collab-maint/spectrwm.git/
 
 Package: spectrwm
 Architecture: any
