--- a/debian/control
+++ b/debian/control
@@ -25,6 +25,7 @@ Package: spectrwm
 Architecture: any
 Provides: x-window-manager
 Depends: suckless-tools,
+         libxt6,
          ${shlibs:Depends},
          ${misc:Depends}
 Recommends: xterm | x-terminal-emulator, xfonts-terminus
