Upgrade x-terminal-emulator from Recommends: to Depends:
The original rationale for turning the terminal emulator into a
weak dependency was that it had to be done for the screen locking
program, so might as well piggyback on that effort.

Now that the default screen locking program has been switched to
slock, part of suckless-tools, there is no point in not checking
the default programs on startup: the kind of user that's
interested in running spectrwm will definitely have at least one
terminal emulator installed.

We can drop D03-make-default-programs-optional.diff and get ever
so slightly closer to upstream.

--- a/debian/control
+++ b/debian/control
@@ -25,10 +25,11 @@ Package: spectrwm
 Architecture: any
 Provides: x-window-manager
 Depends: suckless-tools,
+         xterm | x-terminal-emulator,
          libxt6,
          ${shlibs:Depends},
          ${misc:Depends}
-Recommends: xterm | x-terminal-emulator, xfonts-terminus
+Recommends: xfonts-terminus
 Description: dynamic tiling window manager
  spectrwm is a small dynamic tiling window manager for X11.
  .
