--- a/debian/control
+++ b/debian/control
@@ -19,8 +19,8 @@ Build-Depends: debhelper (>= 11),
 Rules-Requires-Root: no
 Standards-Version: 4.1.3
 Homepage: https://github.com/conformal/spectrwm
-Vcs-Git: https://anonscm.debian.org/git/collab-maint/spectrwm.git
-Vcs-Browser: https://anonscm.debian.org/cgit/collab-maint/spectrwm.git/
+Vcs-Git: https://salsa.debian.org/ab-guest/spectrwm.git
+Vcs-Browser: https://salsa.debian.org/ab-guest/spectrwm
 
 Package: spectrwm
 Architecture: any
