Store input for dh_installwm outside of debian/rules
This reverts 6ca8518be561. I changed my mind :)

--- a/debian/rules
+++ b/debian/rules
@@ -33,7 +33,7 @@ binary-arch: build
 	dh_installexamples
 	dh_installchangelogs
 	dh_installdocs
-	dh_installwm /usr/bin/spectrwm
+	dh_installwm
 	dh_strip
 	dh_compress
 	dh_fixperms
