--- a/debian/rules
+++ b/debian/rules
@@ -4,25 +4,18 @@ DEB_BUILD_MAINT_OPTIONS=hardening=+bindnow
 DPKG_EXPORT_BUILDFLAGS=1
 include /usr/share/dpkg/buildflags.mk
 
-build: build-indep build-arch
-build-indep: build-stamp
+build: build-arch build-indep
 build-arch: build-stamp
+build-indep:
 build-stamp:
 	dh_testdir
 	$(MAKE) -C linux/ PREFIX=/usr \
 	                  LIBDIR=/usr/lib/spectrwm
 	touch $@
 
-clean:
-	dh_testdir
-	dh_testroot
-	rm -f build-stamp
-	$(MAKE) -C linux/ clean
-	dh_clean
-
-binary: binary-indep binary-arch
-binary-indep: build
-binary-arch: build
+binary: binary-arch binary-indep
+binary-arch: build-arch
+binary-indep: build-indep
 	dh_testdir
 	dh_testroot
 	dh_prep
@@ -43,6 +36,13 @@ binary-arch: build
 	dh_md5sums
 	dh_builddeb
 
+clean:
+	dh_testdir
+	dh_testroot
+	rm -f build-stamp
+	$(MAKE) -C linux/ clean
+	dh_clean
+
 # Rebuild the patches series by looking at the contents of the
 # debian/patches directory.
 #
@@ -62,4 +62,4 @@ rebuild-patches-series:
 		} >"$${SERIES}"; \
 	)
 
-.PHONY: build clean binary binary-indep binary-arch rebuild-patches-series
+.PHONY: build build-arch build-indep binary binary-arch binary-indep clean rebuild-patches-series
