--- a/debian/control
+++ b/debian/control
@@ -14,6 +14,8 @@ Build-Depends: debhelper (>= 11),
                libxcb-keysyms1-dev,
                libxcb-randr0-dev,
                libxcb-util0-dev,
+               libxcb-xfixes0-dev,
+               libxcb-xinput-dev,
                libxcb-xtest0-dev,
                libxft-dev
 Rules-Requires-Root: no
