--- a/debian/rules
+++ b/debian/rules
@@ -6,6 +6,7 @@ include /usr/share/dpkg/buildflags.mk
 
 export PREFIX = /usr
 export LIBDIR = /usr/lib/spectrwm
+export SYSCONFDIR = /etc
 export DESTDIR = $(CURDIR)/debian/tmp
 
 %:
