Prevent CHANGELOG.md from being installed
dh_installchangelogs picks it up automatically and installs
it as changelog.gz based on its name, but installing upstream
release notes as changelog.gz is deprecated as of Policy 4.2.0
so we should prevent that from happening.

--- a/debian/rules
+++ b/debian/rules
@@ -25,6 +25,13 @@ override_dh_auto_install:
 override_dh_auto_clean:
 	$(MAKE) -C linux/ clean
 
+# Prevent CHANGELOG.md from being installed.
+#
+# Despite the name, we don't want it to end up being installed as
+# changelog.gz, as doing so would go against Policy.
+override_dh_installchangelogs:
+	dh_installchangelogs --exclude=CHANGELOG.md
+
 # Don't try to run tests.
 #
 # spectrwm doesn't have a test suite, but the OpenBSD Makefile in the
