--- a/debian/rules
+++ b/debian/rules
@@ -23,6 +23,10 @@ override_dh_auto_build:
 
 override_dh_auto_install:
 	$(MAKE) -C linux/ install
+	# Rename the release notes so that dh_installdocs can pick them
+	# up with the expected name later
+	mv $(DESTDIR)/usr/share/doc/spectrwm/CHANGELOG.md \
+	   $(DESTDIR)/usr/share/doc/spectrwm/NEWS
 
 override_dh_auto_clean:
 	$(MAKE) -C linux/ clean
