--- a/debian/control
+++ b/debian/control
@@ -2,7 +2,7 @@ Source: spectrwm
 Section: x11
 Priority: optional
 Maintainer: Andrea Bolognani <eof@kiyuko.org>
-Build-Depends: debhelper (>= 11),
+Build-Depends: debhelper-compat (= 12),
                libx11-dev,
                libx11-xcb-dev,
                libxcursor-dev,
