--- a/debian/gbp.conf
+++ b/debian/gbp.conf
@@ -2,6 +2,7 @@
 upstream-branch = upstream/latest
 debian-branch = debian/sid
 pristine-tar = True
+upstream-signatures = off
 
 [pq]
 patch-numbers = False
