gbp: Sign upstream/* tags
We will start signing debian/* tags as well, and by doing so
provide a trust path for the contents of the git repository.

--- a/debian/gbp.conf
+++ b/debian/gbp.conf
@@ -4,5 +4,8 @@ debian-branch = debian/sid
 pristine-tar = True
 upstream-signatures = off
 
+[import-orig]
+sign-tags = True
+
 [pq]
 patch-numbers = False
