New upstream version 3.4.0

--- a/spectrwm.conf
+++ b/spectrwm.conf
@@ -31,6 +31,7 @@
 
 # Bar Settings
 # bar_enabled		= 1
+# bar_enabled_ws[1]	= 1
 # bar_border_width	= 1
 # bar_border[1]		= rgb:00/80/80
 # bar_border_unfocus[1]	= rgb:00/40/40
@@ -38,8 +39,10 @@
 # bar_color_selected[1]	= rgb:00/80/80
 # bar_font_color[1]	= rgb:a0/a0/a0
 # bar_font_color_selected	= black
-# bar_font		= -*-terminus-medium-*-*-*-*-*-*-*-*-*-*-*
+# bar_font		= xos4 Terminus:pixelsize=14:antialias=true
+# bar_font_pua		= Typicons:pixelsize=14:antialias=true
 # bar_action		= baraction.sh
+# bar_action_expand	= 0
 # bar_justify		= left
 # bar_format		= +N:+I +S <+D>+4<%a %b %d %R %Z %Y+8<+A+4<+V
 # workspace_indicator	= listcurrent,listactive,markcurrent,printnames
@@ -54,6 +57,7 @@
 # window_name_enabled	= 0
 # verbose_layout		= 1
 # urgent_enabled		= 1
+# urgent_collapse	= 0
 
 # Dialog box size ratio when using TRANSSZ quirk; 0.3 < dialog_ratio <= 1.0
 # dialog_ratio		= 0.6
