--- a/spectrwm_fr.conf
+++ b/spectrwm_fr.conf
@@ -4,7 +4,7 @@ bind[bar_toggle]	= MOD+b
 bind[bar_toggle_ws]	= MOD+Shift+b
 bind[button2]		= MOD+v
 bind[cycle_layout]	= MOD+space
-bind[flip_layout]	= MOD+Shift+backslash
+bind[flip_layout]	= MOD+Shift+dollar
 bind[float_toggle]	= MOD+t
 bind[focus_main]	= MOD+m
 bind[focus_next]	= MOD+j
@@ -13,7 +13,7 @@ bind[focus_prev]	= MOD+k
 bind[focus_prev]	= MOD+Shift+Tab
 bind[focus_urgent]	= MOD+u
 bind[height_grow]	= MOD+Shift+equal
-bind[height_shrink]	= MOD+Shift+minus
+bind[height_shrink]	= MOD+Shift+parenright
 bind[iconify]		= MOD+w
 bind[initscr]		= MOD+Shift+i
 bind[lock]		= MOD+Shift+Delete
@@ -41,7 +41,7 @@ bind[mvws_2]		= MOD+Shift+eacute
 bind[mvws_3]		= MOD+Shift+quotedbl
 bind[mvws_4]		= MOD+Shift+apostrophe
 bind[mvws_5]		= MOD+Shift+parenleft
-bind[mvws_6]		= MOD+Shift+hyphen
+bind[mvws_6]		= MOD+Shift+minus
 bind[mvws_7]		= MOD+Shift+egrave
 bind[mvws_8]		= MOD+Shift+underscore
 bind[mvws_9]		= MOD+Shift+ccedilla
@@ -58,7 +58,7 @@ bind[mvws_19]		= MOD+Shift+F9
 bind[mvws_20]		= MOD+Shift+F10
 bind[mvws_21]		= MOD+Shift+F11
 bind[mvws_22]		= MOD+Shift+F12
-bind[name_workspace]	= MOD+Shift+slash
+bind[name_workspace]	= MOD+Shift+colon
 bind[quit]		= MOD+Shift+q
 bind[raise_toggle]	= MOD+Shift+r
 bind[restart]		= MOD+q
@@ -76,7 +76,7 @@ bind[rg_prev]		= MOD+Shift+Left
 bind[screenshot_all]	= MOD+s
 bind[screenshot_wind]	= MOD+Shift+s
 bind[search_win]	= MOD+f
-bind[search_workspace]	= MOD+slash
+bind[search_workspace]	= MOD+colon
 bind[stack_dec]		= MOD+Shift+semicolon
 bind[stack_inc]		= MOD+Shift+comma
 bind[stack_reset]	= MOD+Shift+space
