--- a/debian/control
+++ b/debian/control
@@ -13,7 +13,7 @@ Build-Depends: debhelper-compat (= 13),
                libxcb-icccm4-dev,
                libxcb-keysyms1-dev,
                libxcb-randr0-dev,
-               libxcb-util0-dev,
+               libxcb-util-dev,
                libxcb-xfixes0-dev,
                libxcb-xinput-dev,
                libxcb-xtest0-dev,
