rules: Set priority for x-window-manager alternative
The priority has been calculated using the algorithm outlined
in section "11.8.4. Packages providing a window manager" of
Policy version 4.6.2.

--- a/debian/rules
+++ b/debian/rules
@@ -52,3 +52,11 @@ override_dh_auto_test:
 # libswmhack.so is not a proper shared library, and it should not be
 # treated as such.
 override_dh_makeshlibs:
+
+# Set priority for the x-window-manager alternative.
+#
+# According to Policy, the base priority is 40. It can then be
+# increased based on additional features that the window manager
+# implements, but spectrwm doesn't qualify for any of those bonuses.
+override_dh_installwm:
+	dh_installwm --priority=40
