--- a/spectrwm_us.conf
+++ b/spectrwm_us.conf
@@ -2,20 +2,29 @@
 # unbind with: bind[] = <keys>
 bind[bar_toggle]	= MOD+b
 bind[bar_toggle_ws]	= MOD+Shift+b
+bind[below_toggle]	= MOD+Shift+t
 bind[button2]		= MOD+v
 bind[cycle_layout]	= MOD+space
 bind[flip_layout]	= MOD+Shift+backslash
 bind[float_toggle]	= MOD+t
+bind[focus_free]	= MOD+grave
 bind[focus_main]	= MOD+m
 bind[focus_next]	= MOD+j
 bind[focus_next]	= MOD+Tab
 bind[focus_prev]	= MOD+k
 bind[focus_prev]	= MOD+Shift+Tab
+bind[focus_prior]	= MOD+Shift+a
 bind[focus_urgent]	= MOD+u
+bind[free_toggle]	= MOD+Shift+grave
+bind[fullscreen_toggle]	= MOD+Shift+e
 bind[height_grow]	= MOD+Shift+equal
 bind[height_shrink]	= MOD+Shift+minus
 bind[iconify]		= MOD+w
 bind[initscr]		= MOD+Shift+i
+#bind[layout_floating]	=
+#bind[layout_horizontal]	=
+#bind[layout_max]	=
+#bind[layout_vertical]	=
 bind[lock]		= MOD+Shift+Delete
 bind[master_add]	= MOD+comma
 bind[master_del]	= MOD+period
@@ -36,6 +45,8 @@ bind[mvrg_6]		= MOD+Shift+KP_Right
 bind[mvrg_7]		= MOD+Shift+KP_Home
 bind[mvrg_8]		= MOD+Shift+KP_Up
 bind[mvrg_9]		= MOD+Shift+KP_Prior
+#bind[mvrg_next]		=
+#bind[mvrg_prev]		=
 bind[mvws_1]		= MOD+Shift+1
 bind[mvws_2]		= MOD+Shift+2
 bind[mvws_3]		= MOD+Shift+3
@@ -60,8 +71,10 @@ bind[mvws_21]		= MOD+Shift+F11
 bind[mvws_22]		= MOD+Shift+F12
 bind[name_workspace]	= MOD+Shift+slash
 bind[quit]		= MOD+Shift+q
+bind[raise]		= MOD+r
 bind[raise_toggle]	= MOD+Shift+r
 bind[restart]		= MOD+q
+#bind[restart_of_day]	=
 bind[rg_1]		= MOD+KP_End
 bind[rg_2]		= MOD+KP_Down
 bind[rg_3]		= MOD+KP_Next
@@ -71,12 +84,15 @@ bind[rg_6]		= MOD+KP_Right
 bind[rg_7]		= MOD+KP_Home
 bind[rg_8]		= MOD+KP_Up
 bind[rg_9]		= MOD+KP_Prior
+#bind[rg_move_next]	=
+#bind[rg_move_prev]	=
 bind[rg_next]		= MOD+Shift+Right
 bind[rg_prev]		= MOD+Shift+Left
 bind[screenshot_all]	= MOD+s
 bind[screenshot_wind]	= MOD+Shift+s
 bind[search_win]	= MOD+f
 bind[search_workspace]	= MOD+slash
+#bind[stack_balance]	=
 bind[stack_dec]		= MOD+Shift+period
 bind[stack_inc]		= MOD+Shift+comma
 bind[stack_reset]	= MOD+Shift+space
@@ -112,6 +128,8 @@ bind[ws_19]		= MOD+F9
 bind[ws_20]		= MOD+F10
 bind[ws_21]		= MOD+F11
 bind[ws_22]		= MOD+F12
+#bind[ws_empty]		=
+#bind[ws_empty_move]	=
 bind[ws_next]		= MOD+Right
 bind[ws_next_all]	= MOD+Up
 bind[ws_next_move]	= MOD+Shift+Up
@@ -119,3 +137,5 @@ bind[ws_prev]		= MOD+Left
 bind[ws_prev_all]	= MOD+Down
 bind[ws_prev_move]	= MOD+Shift+Down
 bind[ws_prior]		= MOD+a
+bind[debug_toggle]	= MOD+d
+bind[dumpwins]		= MOD+Shift+d
