--- a/debian/control
+++ b/debian/control
@@ -17,6 +17,7 @@ Build-Depends: debhelper-compat (= 13),
                libxcb-xfixes0-dev,
                libxcb-xinput-dev,
                libxcb-xtest0-dev,
+               libfontconfig-dev,
                libxft-dev
 Rules-Requires-Root: no
 Standards-Version: 4.6.2
